--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -1,11 +1,12 @@
 .cover__subtitle {
-  max-width: 360px;
+  width: 360px;
   margin: 0;
   font-size: 18px;
   line-height: 22px;
   font-weight: 400;
   color: #ffffff;
   text-align: center;
+  z-index: 5;
 
 }
 @media (max-width: 425px) {
