--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,42 +1,22 @@
 .cover {
-background-image: url(../../images/__background.jpg);
-display: flex;
-flex-direction: column;
-flex-basis: calc(740 / 1184 * 100vw);
-align-items: center;
-justify-content: center;
-background-repeat: no-repeat;
-padding: 0 312px;
-max-width: 100%;
-position: relative;
+  margin: 0 auto 92px;
+  max-width: 1184px;
 }
-@media screen and (max-width: 1024px) {
+@media (min-width: 769px) and (max-width: 1024px) {
   .cover {
-    padding: 0 232px;
+    max-width: 100%;
+    margin: 0 auto 92px;
   }
 }
-@media screen and (max-width: 768px) {
+@media (min-width: 321) and (max-width: 769px) {
   .cover {
-    padding: 0 104px;
+    max-width: 100%;
+    margin: 0 auto 88px;
   }
 }
-@media screen and (max-width: 320px) {
+@media (max-width: 320px) {
   .cover {
-    padding: 0 16px;
+    max-width: 100%;
+    margin: 0 auto 64px;
   }
 }
-.cover::before {
-  content: '';
-  display: block;
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  background-color: #2A2C2F;
-  opacity: .3;
-}
-.cover:hover::before  {
-  opacity: .8;
-}
-
