--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -1,22 +1,14 @@
 .footer__copyright {
-    margin: 0;
-    font-weight: 400;
+  margin: 0;
+  font-size: 14px;
+  line-height: 16px;
+  font-weight: 400;
+  color: #ffffff;
+}
+@media (max-width: 767px) {
+  .footer__copyright {
     font-size: 14px;
-    line-height: 16px;
-    padding: 0;
-    font-family: 'Inter';
-    font-style: normal;
+    line-height: 14px;
+    margin-top: 48px;
   }
-
-  .footer__copyright:before {
-    padding-right: 5px;
-  }
-
-@media screen and (max-width: 320px) {
-    .footer__copyright {
-        line-height: 14px;
-        padding-top: 16px;
-    }
-  }
-
-
+}
