--- a/blocks/header/__lang-link/_active/header__lang-link_active.css
+++ b/blocks/header/__lang-link/_active/header__lang-link_active.css
@@ -1,3 +1,5 @@
-.header__lang-link_active{
-    text-decoration: underline;
-}
+.header__lang-link_active {
+    box-shadow: 0 1px 0 0 white;
+    cursor: default;
+  }
+  
