--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -1,13 +1,18 @@
-.header__lang-link{
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: 400;
+.header__lang-link {
     font-size: 24px;
     line-height: 28px;
-    /* identical to box height, or 117% */
-    text-align: right;
+    font-weight: 400;
+    color: #ffffff;
     text-decoration: none;
-    color: #FFFFFF;
-    z-index: 10;
-    margin-bottom: 6px;
-}
+    transition: linear .335s;
+  }
+  .header__lang-link:hover {
+    box-shadow: 0 1px 0 0 white;
+  }
+  @media (max-width: 767px) {
+    .header__lang-link {
+      font-size: 18px;
+      line-height: 24px;
+    }
+  }
+  
