--- a/blocks/header/__lang/header__lang.css
+++ b/blocks/header/__lang/header__lang.css
@@ -1,8 +1,8 @@
 .header__lang{
-    padding: 0;
-    margin: 0;
-    display: flex;
-    align-self: flex-end;
-    list-style-type: none;
-    gap: 18px;
+    margin-right: 18px;
 }
+
+.header__lang:last-child {
+    margin-right: 0;
+}
+  
