--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,27 +1,26 @@
-.header{
-  max-width: 1184px;
-  margin: 0 auto;
-  display:flex;
-  justify-content: space-between;
-  align-items:flex-end;
-  padding: 28px 0 56px;
+.header {
+  margin: 28px auto 56px;
+  max-width: calc(100% - 96px);
+  display: flex;
+  justify-content: start;
+  align-items: flex-start;
+  box-sizing: content-box;
 }
-
-@media screen and (max-width: 1024px) {
+@media (min-width: 769px) and (max-width: 1024px) {
   .header {
-    max-width: 928px;
-
+    margin: 28px auto 48px;
+    max-width: calc(100% - 96px);
   }
 }
-@media screen and (max-width: 768px) {
+@media (min-width: 426px) and (max-width: 768px) {
   .header {
-    max-width: 720px;
-
+    margin: 28px auto 48px;
+    max-width: calc(100% - 48px);
   }
 }
-@media screen and (max-width: 320px) {
+@media (max-width: 425px) {
   .header {
-    max-width: 288px;
-    padding-top: 16px;
+    margin: 28px auto 48px;
+    max-width: calc(100% - 32px);
   }
 }
