--- a/blocks/intro/__list/intro__list.css
+++ b/blocks/intro/__list/intro__list.css
@@ -1,11 +1,6 @@
-.intro__list{
+.intro__list {
     margin: 0;
     padding: 0;
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 12px;
-    line-height: 18px;
-    list-style-type: none;
-    max-width: 984px;
-}
+    list-style: none;
+  }
+  
