--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -1,9 +1,19 @@
-.intro__text{
-    max-width: 984px;
-    margin: 0 0 34px;
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: 400;
+.intro__text {
+    margin: 0 0 36px 0;
+    max-width: 690px;
     font-size: 16px;
     line-height: 26px;
-}
+    font-weight: 400;
+    color: #ffffff;
+  }
+  @media (min-width: 426px) and (max-width: 768px) {
+    .intro__text {
+      max-width: 100%;
+    }
+  }
+  @media (max-width: 425px) {
+    .intro__text {
+      max-width: 100%;
+    }
+  }
+
