--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -1,16 +1,15 @@
-.intro__title{
-    margin:0 0 40px;
-    max-width: 984px;
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: 900;
+.intro__title {
+    margin: 0 0 33px;
     font-size: 54px;
     line-height: 58px;
-}
-
-@media screen and (max-width: 320px) {
-    .intro {
-        font-size: 32px;
-        line-height: 35px;
+    font-weight: 900;
+    color: #ffffff;
+  }
+  @media (max-width: 425px) {
+    .intro__title {
+      max-width: 84%;
+      font-size: 32px;
+      line-height: 35px;
     }
-}
+  }
+
