--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,33 +1,29 @@
-.photo-grid{
-    max-width: 1184px;
-    margin: 0;
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(284px, 1fr));
-    gap: 16px;
+.photo-grid {
+  margin: 0 auto 92px;
+  max-width: calc(100% - 96px);
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-gap: 16px;
 }
-
-
-@media screen and (max-width: 1024px) {
-    .photo-grid {
-      max-width: 928px;
-    }
+@media (min-width: 769px) and (max-width: 1024px) {
+  .photo-grid {
+    max-width: calc(100% - 96px);
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 14px;
   }
-  
-  @media screen and (max-width: 768px) {
-    .photo-grid {
-      max-width: 768px;
-    }
+}
+@media (min-width: 426px) and (max-width: 768px) {
+  .photo-grid {
+    margin: 0 auto 88px;
+    max-width: calc(100% - 48px);
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 16px;
   }
-  
-  @media screen and (max-width: 320px) {
-    .photo-grid {
-      max-width: 90%;
-      gap: 12px;
-    }
+}
+@media (max-width: 425px) {
+  .photo-grid {
+    margin: 0 auto 64px;
+    max-width: calc(100% - 32px);
+    grid-template-columns: 1fr;
   }
-
-  @media screen and (max-width: 319px) {
-    .photo-grid {
-      grid-template-columns: repeat(auto-fit, minmax(288, 1fr));
-    }
-  }
+}
