--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -1,5 +1,5 @@
 .place__website {
-    margin: 0 0 8px 0;
+    margin: 0;
     align-self: end;
   }
   @media (min-width: 426px) and (max-width: 768px) {
