--- a/blocks/intro/__list-item/intro__list-item.css
+++ b/blocks/intro/__list-item/intro__list-item.css
@@ -1,5 +1,5 @@
 .intro__list-item {
-    margin: 0 0 2px 0;
+    margin: 0 0 0 0;
     font-size: 12px;
     line-height: 18px;
     font-weight: 400;
