--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -1,5 +1,5 @@
 .place__title {
-  margin: 8px 0 0 0;
+  margin:0;
   align-self: end;
   font-size: 72px;
   line-height: 76px;
@@ -16,8 +16,9 @@
 }
 @media (max-width: 425px) {
   .place__title {
-    margin: 0 16px;
     font-size: 32px;
     line-height: 35px;
+    max-width: 288px;
+    margin:0 16px;
   }
 }
