--- a/blocks/cover/__overlay/cover__overlay.css
+++ b/blocks/cover/__overlay/cover__overlay.css
@@ -1,5 +1,5 @@
 .cover__overlay {
-    padding-top: 62.6%;
+    min-height: 740px;
     max-width: 100%;
     display: flex;
     flex-direction: column;
@@ -26,4 +26,18 @@
   .cover__overlay:hover::before  {
     opacity: .8;
   }
-  
+  @media (min-width: 769px) and (max-width: 1024px) {
+    .cover__overlay {
+      min-height: 640px;
+    }
+  }
+  @media (min-width: 351px) and (max-width: 768px) {
+    .cover__overlay {
+      min-height: 480px;
+    }
+  }
+  @media (max-width: 350px) {
+    .cover__overlay {
+      min-height: 200px;
+    }
+  }
