--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -5,6 +5,7 @@
   font-weight: 900;
   color: #ffffff;
   text-align: center;
+  max-width: 560px;
 }
 @media (min-width: 426px) and (max-width: 560px) {
   .cover__title {
