--- a/blocks/footer/__list/footer__list.css
+++ b/blocks/footer/__list/footer__list.css
@@ -6,12 +6,19 @@
     align-content: center;
     list-style: none;
     gap: 18px;
+    padding-left: 48px;
+  }
+  @media (max-width: 768px) {
+    .footer__list {
+      padding-left: 24px;
+    }
   }
   @media (max-width: 767px) {
     .footer__list {
       flex-direction: column;
       align-content: flex-start;
       row-gap: 32px;
+      padding-left: 16px;
     }
   }
   
