--- a/blocks/header/__lang-list/header__lang-list.css
+++ b/blocks/header/__lang-list/header__lang-list.css
@@ -1,12 +1,18 @@
 .header__lang-list {
-    margin: 18px 0 0 auto;
-    padding: 0;
+    padding: 46px 48px 56px 0;
+    margin: 0;
     display: flex;
     list-style: none;
   }
+
+  @media (max-width: 768px) {
+    .header__lang-list {
+      padding: 46px 24px 0 0;
+    }
+  }
   @media (max-width: 767px) {
     .header__lang-list {
-      margin: 14px 0 0 auto;
+      padding: 30px 16px 0 0;
     }
   }
   
