--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -1,25 +1,27 @@
 .places {
-  margin: 0 auto 92px;
-  max-width: 984px;
+  padding: 0 48px 92px 48px;
+  max-width: 1280px;
   display: flex;
   flex-direction: column;
   row-gap: 80px;
+  align-items: center;
 }
 @media (min-width: 769px) and (max-width: 1024px) {
   .places {
-    max-width: calc(100% - 96px);
+    max-width: 100%;
     row-gap: 80px;
   }
 }
 @media (min-width: 426px) and (max-width: 768px) {
   .places {
-    max-width: calc(100% - 48px);
+    max-width: 100%;
+    padding: 0 24px 90px 24px;
     row-gap: 73px;
   }
 }
 @media (max-width: 426px) {
   .places {
-    margin: 0 auto 66px;
+    padding: 0 0 66px 0;
     row-gap: 50px;
   }
 }
