--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -6,6 +6,7 @@
   color: #ffffff;
   text-align: center;
   max-width: 560px;
+  z-index: 10;
 }
 @media (min-width: 426px) and (max-width: 560px) {
   .cover__title {
